[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Controller.gd" type="Script" id=1]
[ext_resource path="res://Audio/Gamemaster_audio_Punch_and_Combat_Sounds/foley_object_grab_pickup_04.ogg" type="AudioStream" id=4]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.01, 3, 0.01 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.460938, 0.633606, 1, 0.431373 )

[sub_resource type="SphereShape" id=4]
radius = 0.1

[sub_resource type="SphereShape" id=5]

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.01, 0.5, 0.01 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.667298, 1, 0.460938, 0.431373 )

[node name="Controller" type="ARVRController"]
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( -0.704196, -0.0820646, 0.705246, 0.626412, 0.395789, 0.671534, -0.334238, 0.914667, -0.227307, -0.0468995, 0.00399885, -0.131958 )
cast_to = Vector3( 0, -16, 0 )

[node name="Mesh" type="MeshInstance" parent="RayCast"]
transform = Transform( 1, 0, 1.2666e-07, 5.96046e-08, 1, 4.47035e-08, -4.47035e-08, -4.47035e-08, 1, -2.98023e-08, -1.48814, 5.96046e-08 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0417899, -0.0449467 )
shape = SubResource( 4 )

[node name="GrabPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0145124, -0.00105381 )

[node name="SleepArea" type="Area" parent="."]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="SleepArea"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="GrabCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0 )
cast_to = Vector3( 0, -0.5, 0 )

[node name="Mesh" type="MeshInstance" parent="GrabCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.244232, 7.45058e-09 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
