[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/WorldManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Left_Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Right_Controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Areas/MainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Controller.gd" type="Script" id=6]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Terrain" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ARVROrigin" type="ARVROrigin" parent="ViewportContainer/Viewport"]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 1, 0 )

[node name="PlayerCamera" type="ARVRCamera" parent="ViewportContainer/Viewport/ARVROrigin"]
current = true

[node name="LeftController" parent="ViewportContainer/Viewport/ARVROrigin" instance=ExtResource( 2 )]
script = ExtResource( 6 )

[node name="RightController" parent="ViewportContainer/Viewport/ARVROrigin" instance=ExtResource( 3 )]
script = ExtResource( 6 )

[connection signal="button_pressed" from="ViewportContainer/Viewport/ARVROrigin/LeftController" to="ViewportContainer/Viewport/ARVROrigin/LeftController" method="_on_LeftController_button_pressed"]
[connection signal="button_release" from="ViewportContainer/Viewport/ARVROrigin/LeftController" to="ViewportContainer/Viewport/ARVROrigin/LeftController" method="_on_LeftController_button_release"]
[connection signal="button_pressed" from="ViewportContainer/Viewport/ARVROrigin/RightController" to="ViewportContainer/Viewport/ARVROrigin/RightController" method="_on_RightController_button_pressed"]
[connection signal="button_release" from="ViewportContainer/Viewport/ARVROrigin/RightController" to="ViewportContainer/Viewport/ARVROrigin/RightController" method="_on_RightController_button_release"]
